
http://www.packetfence.org/support/community.html

This is a list of noteworthy changes across releases. 
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.

--------------------------------------------------------------------------------
Version <stableRelease> released on <releaseDate>

Bug Fixes
 * FreeRADIUS watchdog updated for 3.5.0 changes (#1514)
 * debian packages improvements regarding FreeRADIUS configuration
 * cosmetic fix in `pfcmd service ... status` regarding pfdhcplistener (#1515)
 * Guests are not able to confirm registration in some cases - take 2 (#1302)
 * Sponsored guests regressions (#1505)

--------------------------------------------------------------------------------
Version 3.5.0 released on 2012-08-01

New Hardware
 * Adding support for Cisco Catalyst 3560G
 * Netgear GS110 series support (SNMP Link up/down)
 * Cisco Aironet in Wireless Directory Services (WDS) mode

New Features 
 * Remediation module for SourceFire 3D (addons/sourcefire)
 * Adding portal profile feature that allow to present a custom captive portal depending
   on the SSID you connect to. Refer to Administration Guide for further details
 * Adding a new action to close another violation 
 * Adding a new web based configurator that helps the installation and configuration process
   of a new PacketFence installation
 * Adding support for Suricata IDS (#1141)

Enhancements
 * Improved handling of an empty conf/pf.conf configuration file
 * Improved error reporting for dynamic uplink detection on Cisco
 * interface gateways are no longer required in configuration (#1447)
 * general.caching parameter removed from configuration
 * major refactoring, cleanup and dependencies removal
 * node.expire now works for VLAN/Inline mode (#1481)
 * Closing expired violations using the release_date (#1476)
 * Excluding the local switch when building the NAS SQL table (#1491)