@@ -857,6 +857,12 @@ telling users to open their browsers. Enable them via the ports.listeners
 parameter and add the IMAP (143/tcp) and POP3 (110/tcp) here.
 EOT
 
+[inline.interfaceSNAT]
+type=text
+description=<<EOT
+Interface that is use to SNAT the traffic
+EOT
+
 [servicewatch.email]
 type=toggle
 options=enabled|disabled
