@@ -113,6 +113,11 @@ COMMIT
 # Make sure to adjust the FORWARD rules also to allow traffic back-in.
 :postrouting-int-inline-if - [0:0]
 %%nat_postrouting_inline%%
+#
+# Chain to enable routing instead of NAT
+#
+:postrouting-int-inline-nonat - [0:0]
+%%nonat_postrouting_inline%%
 :OUTPUT ACCEPT [0:0]
 # These will redirect to the proper chains based on conf/pf.conf's configuration
 %%nat_if_src_to_chain%%
