@@ -615,6 +615,8 @@ An important configuration parameter to have in mind when configuring inline enf
 
 Introduced in PacketFence 3.3, inline enforcement now use DNS DNAT for unregistered or isolated users. Long story short, DNS is now working almost the same way as in VLAN enforcement mode. The only difference is that you need to make sure, as previously stated, to set a valid production DNS server for the inline configuration in `conf/networks.conf` and that the `named` statement is set to enabled.
 
+Introduced in PacketFence 3.6, the outgoing interface should be specified by adding in pf.conf the option interfaceSNAT in inline section. It is a comma limited list of network interfaces like eth0,eth0.100. It's also possible to specify a network that will be routed instead of using NAT by adding in `conf/networks.conf` an option nat=no under one or more network section.
+
 Another important setting is the `gateway` statement. Since it this the only way to get the PacketFence server inline interface ip address, it is mandatory to set it to this ip (which is supposed to be the same as in the `ip` statement of the inline interface in `conf/pf.conf`) .
 
 DHCP and DNS Server Configuration (networks.conf)
@@ -642,6 +644,8 @@ named::
 Is PacketFence the DNS for this network ? (Enabled/Disabled) set it to enabled
 dhcpd:: 
 Is PacketFence the DHCP server for this network ? (Enabled/Disabled) set it to enabled
+nat::
+Is PacketFence route or NAT the traffic for this network ? (yes/no) NAT enabled by default, set to no to route
 
 When starting PacketFence generates the DHCP and DNS configuration files by reading the information provided in `networks.conf`:
 
@@ -2521,7 +2525,7 @@ Technical introduction to Inline enforcement
 Introduction
 ~~~~~~~~~~~~
 
-Before the version 3.0 of PacketFence, it was not possible to support unmanageable devices such as entry-level consumer switches or access-points. Now, with the new inline mode, PacketFence can be use in-band for those devices. So in other words, PacketFence will become the gateway of that inline network, and NAT the traffic using IPTables to the Internet (or to another section of the network). Let see how it works.
+Before the version 3.0 of PacketFence, it was not possible to support unmanageable devices such as entry-level consumer switches or access-points. Now, with the new inline mode, PacketFence can be use in-band for those devices. So in other words, PacketFence will become the gateway of that inline network, and NAT or route the traffic using IPTables to the Internet (or to another section of the network). Let see how it works.
 
 Device configuration
 ~~~~~~~~~~~~~~~~~~~~
